Committing changes left behind - mostly updating functions

--- a/wp-content/themes/Roots/assets/less/layouts/_header.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_header.less
@@ -40,8 +40,8 @@
 
 	ul {
 		width: 65%;
-		left: 37%;
-		top: 2px;
+		left: 39%;
+		top: 4px;
 		position: relative;
 		@media all and (max-width: @tablet) {
 			width: 100%;
@@ -65,7 +65,7 @@
 		li {
 			display: inline-block;
 			width: 15%;
-			text-align: right;
+			text-align: center;
 			margin-left: .5%;
 
 			@media all and (max-width: @tablet) {
@@ -107,4 +107,3 @@
 		}
 	}
 }
-
