last changes after deployment

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -1230,6 +1230,7 @@ table {
 	border-right: 1px solid @light-gray;
 	padding: 2px 4px;
 	overflow-y: scroll;
+	max-height: 155px;
 }
 
 .calendar-day-np {
@@ -1331,6 +1332,15 @@ table {
 	}
 }
 
+.delete-event {
+	display: block;
+	margin: -30px 10px 40px auto;
+	background-color: @main-blue;
+	color: @white;
+	border-radius: 2px;
+	font-size: 12px;
+	
+}
 .mobile-only {
 	display: none;
 	@media all and (max-width: @mobile) {
